Refactored the code to use an interface and added partial documentation. All tests still pass.

--- a/TDD-Samples/TDD-Samples.csproj
+++ b/TDD-Samples/TDD-Samples.csproj
@@ -58,6 +58,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="IRomanNumeralConverter.cs" />
     <Compile Include="RomanNumeralConverter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
